--- a/CrowdedMountain/media/basic_style.css
+++ b/CrowdedMountain/media/basic_style.css
@@ -1,5 +1,20 @@
 body {
-background-image:url('mountain1.jpg');
-#background-color:#cccccc;
+/*background-image:url('mountain1.jpg');
+background-size: cover;*/
+/*background-color:#cccccc;*/
 color: black;
+}
+
+h1 {
+/*background-color:#cccccc;*/
+font-size: 2.5em;      /* set size of letters in pixels or em, 1em = current font size (typically 16px) */
+font-style: normal;    /* normal, bold, italic */
+letter-spacing: 0.10em;
+font-family: helvetica, verdana, sans-serif;
+color: white;
+/*
+ in the box model, this is represented by margin, box, padding, element
+*/
+margin: 20px;  /* can be set with margin-top, bottom, left, right as well */
+padding: 40px;
 }
