--- a/CrowdedMountain/templates/cdot_template.html
+++ b/CrowdedMountain/templates/cdot_template.html
@@ -56,9 +56,25 @@
           -- What are the most useful stats?  
 	         ** ski-able area by color of run / number of people
 		 ** total ski-able area / number of people
-		 ** snow over the last couple of weeks / number of people
+		 ** snow / ~ number of people there currently
+		 ** snow / ski-able terrain for each skill level
+		 ** total terrain park area / number of people
 		 ** efficiency / throughput (speed of lifts = # people / second)
 		        (total # liftchairs * max # people on one chair) / (2 * time to top of lift)
      Google map location of each mountain and links to direction to each
+     
+     Information needed:
+          ** speed of lifts (varies considerably, maybe avg. speed)
+	  ** capacity of lifts
+	  ** conditions in which lifts will shutdown
+	  ** realtime weather data
+	  ** realtime traffic data
+	  ** realtime updates on when lifts are up or down (if available)
+	  ** relationship between skill level and amount of snow or people at a resort
+	  ** predicted optimal travel times back to Denver
+	  ** dates when there are more likely to be locals vs out of towners
+	  ** upcoming holidays for southwestern states
+	  ** demographics for skiing in Colorado (which states?  genders?  age?  salary range?  )
+	  ** historical data for ski resort person counts with corresponding amount of snow, lifts open, traffic, ski-able terrain, park terrain, school holidays in Colorado, Texas, California, Arizona, New Mexico, Nevada
 
 -->
