--- a/CrowdedMountain/templates/cdot_template.html
+++ b/CrowdedMountain/templates/cdot_template.html
@@ -51,17 +51,25 @@
 
 <!-- Desired Features: 
 
-     Some estimate of the number of people at each mountain (current and future)
-          -- Start with the big ones: Vail, Beaver Creek, Copper Mountain, Breckenridge
-          -- What are the most useful stats?  
-	         ** ski-able area by color of run / number of people
-		 ** total ski-able area / number of people
-		 ** snow / ~ number of people there currently
-		 ** snow / ski-able terrain for each skill level
-		 ** total terrain park area / number of people
-		 ** efficiency / throughput (speed of lifts = # people / second)
-		        (total # liftchairs * max # people on one chair) / (2 * time to top of lift)
-     Google map location of each mountain and links to direction to each
+     1. Estimate of the number of people at each mountain 
+          a. current (updated every 2 minutes, dynamic model)
+	  b. future (hourly, daily [weekend, 5 days, 10 days, holidays?])
+	       i. include errors (hourly), average error per day
+	       ii. past information [for the same time of year and holidays last year]
+     2. Estimate of the number of people on each lift at the current time
+     3. Upcoming holidays and events at each mountain [both a warning and advertisement in forecasts]
+
+     
+      -- Start with the big ones: Vail, Beaver Creek, Copper Mountain, Breckenridge
+      -- What are the most useful stats?  
+           ** ski-able area by color of run / number of people
+	   ** total ski-able area / number of people
+	   ** snow / ~ number of people there currently
+	   ** snow / ski-able terrain for each skill level
+	   ** total terrain park area / number of people
+	   ** efficiency / throughput (speed of lifts = # peoontedhple on whole lift / second)
+	   (total # liftchairs * max # people on one chair) / (2 * time to top of lift)
+ 
      
      Information needed:
           ** speed of lifts (varies considerably, maybe avg. speed)
@@ -77,4 +85,16 @@
 	  ** demographics for skiing in Colorado (which states?  genders?  age?  salary range?  )
 	  ** historical data for ski resort person counts with corresponding amount of snow, lifts open, traffic, ski-able terrain, park terrain, school holidays in Colorado, Texas, California, Arizona, New Mexico, Nevada
 
+     Next steps:
+     
+	  ** estimate current numbers from realtime car data
+	       ** these numbers are available every 2 minutes
+          ** get historical ski resort approximations from cotrip
+	       ** these numbers are available monthly
+	       ** download numbers for last 5 years from cotrip
+	       ** parse into cdot estimates of attendace numbers for each resort
+	       ** upload cdot estimates into database
+	       ** classify each hour/day/resort
+
+	       
 -->
