--- a/CrowdedMountain/templates/cdot_template.html
+++ b/CrowdedMountain/templates/cdot_template.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}MMMmmmmountain DATA{% endblock %}
+{% block title %}Basic Skier Volume Estimate{% endblock %}
 
 {% block header %}
     {% load staticfiles %}
