--- a/CrowdedMountain/media/basic_style.css
+++ b/CrowdedMountain/media/basic_style.css
@@ -7,14 +7,28 @@ color: black;
 
 h1 {
 /*background-color:#cccccc;*/
-font-size: 2.5em;      /* set size of letters in pixels or em, 1em = current font size (typically 16px) */
-font-style: normal;    /* normal, bold, italic */
-letter-spacing: 0.10em;
+font-size: 4.5em;      /* set size of letters in pixels or em, 1em = current font size (typically 16px) */
+font-style: bold;    /* normal, bold, italic */
+letter-spacing: 0.05em;
 font-family: helvetica, verdana, sans-serif;
-color: white;
+color: black;
 /*
  in the box model, this is represented by margin, box, padding, element
 */
-margin: 20px;  /* can be set with margin-top, bottom, left, right as well */
-padding: 40px;
+margin: 10px;  /* can be set with margin-top, bottom, left, right as well */
+padding: 20px;
+}
+
+h2 {
+/*background-color:#cccccc;*/
+font-size: 1.5em;      /* set size of letters in pixels or em, 1em = current font size (typically 16px) */
+font-style: normal;    /* normal, bold, italic */
+letter-spacing: 0.02em;
+font-family: helvetica, verdana, sans-serif;
+color: black;
+/*
+ in the box model, this is represented by margin, box, padding, element
+*/
+margin: 10px;  /* can be set with margin-top, bottom, left, right as well */
+padding: 20px;
 }
