Added a new css sheet for the home page with minor modifications

--- a/CrowdedMountain/media/basic_style.css
+++ b/CrowdedMountain/media/basic_style.css
@@ -1,3 +1,5 @@
+/* used by the base.html template that is inherited by everything */
+
 body {
 /*background-image:url('mountain1.jpg');
 background-size: cover;*/
