--- a/CrowdedMountain/templates/home.html
+++ b/CrowdedMountain/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 {% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static "cdot_count_style.css" %}">
+<link rel="stylesheet" type="text/css" href="{% static "home_style.css" %}">
 <script type="text/javascript" src="{% static "modernizr-2.7.1.js" %}"></script>
 {% endblock %}
 
@@ -13,10 +13,12 @@
 <script>
   $(document).ready(function() {
   
+      $( "a" ).addClass("test");
       $( "a" ).click(function( event ) {
   
           alert( "Thanks for visiting!" );
-  
+          $( this ).hide("slow");
+      
       });
   
   });
