--- a/CrowdedMountain/templates/cdot_template.html
+++ b/CrowdedMountain/templates/cdot_template.html
@@ -37,7 +37,8 @@
 </div>
 </div>
 </div>
-<script type="text/javascript" src="{% static "jquery-1.10.2.js" %}"></script>
+<!-- trying out using the Google CDN (just for the jquery bit -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="{% static "jquery.mountain_slider.js" %}"></script>
 <script>
   $(function() {
