--- a/CrowdedMountain/media/place_holder_style.css
+++ b/CrowdedMountain/media/place_holder_style.css
@@ -5,34 +5,141 @@ figure{
     display: block;
 }
 
-/* http://tutorialzine.com/2010/02/html5-css3-website-template/ */
-
-a.test {
-    font-weight: bold;
-    margin: 10px;  /* can be set with margin-top, bottom, left, right as well */
-    padding: 20px;
-}
-
+/* Based on tutorial at: http://tutorialzine.com/2010/02/html5-css3-website-template/ */
 /* # for id, . for class */
 
-#mountain_images {
-    position: relative;
-    height: 432px;
-    width: 807px;
-    margin: 0 auto;
+article .line {
+    /* make the dividing line inside of the article tag darker */
+    background-color:#15242a;
+    border-bottom-color:#204656;
+    margin: 1.3em 0;
 }
 
-#mountain_images img {
-    position: absolute;
-    left: 0;
-    -webkit-transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -o-transition: opacity 1s ease-in-out;
-    transition: opacity 1s ease-in-out;
-    cursor: pointer;
+footer .line {
+    margin: 2em 0;  /* can be set with margin-top, bottom, left, right as well */
 }
 
-#mountain_images img.transparent {
-    opacity: 0;
+nav {
+    /*background:url(img/gradient_light.jpg) repeat-x 50% 50% #f8f8f8;*/
+    background: #f8f8f8;
+    padding:0 5px;
+    float: left;
+    /*position: absolute;
+    right: 0;
+    top: 10em;*/
+
+    border: 1px solid #FCFCFC;
+
+    -moz-box-shadow:0 1px 1px #333333;
+    -webkit-box-shadow:0 1px 1px #333333;
+    box-shadow:0 1px 1px #333333;
 }
 
+nav ul li {
+    display:inline;
+}
+
+nav ul li a,
+nav ul li a:visited {
+    color:#565656;
+    display: block;
+    float: left;
+    font-size: 1.25em;
+    font-wight: bold;
+    margin: 5px 4px;
+    padding: 2px 10px 5px;
+    text-shadow:0 1px 1px white;
+    /*text-transform: uppercase;*/
+}
+
+nav ul li a:hover {
+    text-decoration: none;
+    background-color: #f0f0f0;
+}
+
+nav, article, nav ul li a, figure {
+    /* add rounded corners */
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#page{
+    width:960px;
+    margin:0 auto;
+    position:relative;
+}
+
+article {
+    background-color: #C2EFFF;
+    margin: 3em 0;
+    /*padding: 20px;*/
+
+    font-style: bold;
+
+    /*text-shadow:0 2px 0 black; */
+}
+
+article {
+    background-color: #C2EFFF;
+    margin: 3em 0;
+    padding: 20px;
+
+    font-weight: bold;
+
+    /*text-shadow:0 2px 0 black; */
+}
+
+figure{
+    border:3px solid #142830;
+    float:right;
+    height:300px;
+    margin-left:15px;
+    overflow:hidden;
+    width:500px;
+}
+
+figure:hover {
+    -moz-box-shadow:0 0 2px #4D7788;
+    -webkit-box-shadow:0 0 2px #4D7788;
+    box-shadow:0 0 2px #4D7788;
+}
+
+figure img{
+    /*moves within the image */
+    margin-left:-60px;
+}
+
+footer{
+    margin-bottom:30px;
+    text-align:center;
+    font-size:0.825em;
+}
+
+footer p{
+    margin-bottom:-2.5em;
+    position:relative;
+}
+
+footer a,footer a:visited{
+    color:#cccccc;
+    background-color:#213e4a;
+    display:block;
+    padding:2px 4px;
+    z-index:100;
+    position:relative;
+}
+
+footer a:hover{
+    text-decoration:none;
+    background-color:#142830;
+}
+
+footer a.by{
+    float:left;
+
+}
+
+footer a.up{
+    float:right;
+}
