--- a/CrowdedMountain/templates/place_holder.html
+++ b/CrowdedMountain/templates/place_holder.html
@@ -10,14 +10,38 @@
 <!-- start of first part of scrolling 1 pager -->
 <div class="line"></div>
 <article id="article1">
-  <h2>Mountain Map</h2>
+  <h2>Current Mountain Conditions</h2>
   <div class="line"></div>
-  <div class="articleBody clear">
     <figure> <!-- marks data, usually an image that is a part of the article -->
-      <img id="yeti-large" src="{% static "Snow Yeti Large.jpg" %}"/>
+      <img id="yeti-large" src="{% static "mountain3.jpg" %}"/>
     </figure>
-    <p>This site estimates the number of skiers based on publically available data</p>
-  </div>
+    <p>This site estimates the current number of skiers in each region of each mountain
+      based on publically available data from traffic information, webcams, and social media.  
+      Don't get stuck in the crowds!  Check our site from the slopes for the best lift and area
+      to hit up next.
+    </p>
+</article>
+<article id="article2">
+  <h2>Mountain Crowd Forecasts</h2>
+  <div class="line"></div>
+    <figure> <!-- marks data, usually an image that is a part of the article -->
+      <img id="yeti-large" src="{% static "mountain2.jpg" %}"/>
+    </figure>
+    <p>Don't just take a shot in the dark when planning your weekend or vacation.  Use the Powder
+      Map to discover, where the crowds will be during your upcoming vacation.  You have a lot of
+      choices for mountains, and we want you to make the right one!
+    </p>
+</article>
+<article id="article3">
+  <h2>Traffic and Weather Forecasts</h2>
+  <div class="line"></div>
+    <figure> <!-- marks data, usually an image that is a part of the article -->
+      <img id="yeti-large" src="{% static "mountain1.jpg" %}"/>
+    </figure>
+    <p>We've partnered with the best in weather and traffic in order to provide you with the optimal
+      time to head home or to the airport from the mountains.  Just check our site and lunch and ski 
+      worry free.  No more 4 hour waits at the tunnel.  Play it smart.  Use the Powder Map.
+    </p>
 </article>
 {% endblock %}
 {% block javascript_includes %}
