--- a/PowdrMap/templates/base_html5.html
+++ b/PowdrMap/templates/base_html5.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html lang="en" class="no-js">
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>{% block title %}Mountain Crowd Estimates{% endblock %}</title>
     {% load staticfiles %}
@@ -8,16 +8,15 @@
     {% block header %}
     {% endblock %}
     <!-- No HTML5 shiv needed, included in Modernizr -->
-</head>
-<body>
-  <section id="page">
+  </head>
+  <body>
     <header>
       {% block headers %}
       <h1>The Powder Map.</h1>
       {% endblock %}
       <nav class="clear"> <!-- marks the main site navigation, no idea why it has the clear class -->
 	<!-- SOLUTION: floated objects do not add to the height of the object they reside in (properly)
-	  so they need to be "cleared" in order to have the containing object account for their heights -->
+	     so they need to be "cleared" in order to have the containing object account for their heights -->
 	<!-- Usually clear is used to tell another object to not "float" around an object that is float
 	     and to instead hop on down to the bottom below it. -->
 	{% block nav %}
@@ -30,20 +29,21 @@
       </nav>
       <!--<h3>Use our site for up to date info on which mountain and lifts the people aren't at.</h3>-->
     </header>
+    <section id="interior_page">
       <!-- define the parts of the code that are different 
 	   between the different pages with block tags -->
 
-    {% block content %}<!-- put default content in here, can always be overwritten --> 
-    {% endblock %}
+      {% block content %}<!-- put default content in here, can always be overwritten --> 
+      {% endblock %}
 
-    <footer>
-    {% block footer %}
-    <div class="line"></div>
-    <p>Copyright 2014 - Snow Yeti Software LLC</p>
-    {% endblock %}
-    </footer>
+      <footer>
+	{% block footer %}
+	<div class="line"></div>
+	<p>Copyright 2014 - Snow Yeti Software LLC</p>
+	{% endblock %}
+      </footer>
     </section>
     {% block javascript_includes %}
     {% endblock %}
-</body>
+  </body>
 </html>
