--- a/PowdrMap/templates/place_holder.html
+++ b/PowdrMap/templates/place_holder.html
@@ -10,7 +10,7 @@
 <!-- start of first part of scrolling 1 pager -->
 <div class="line"></div>
 <article id="article1" class="panel">
-  <img class="bg_img" src="{% static "mountain3.jpg" %}"/>
+  <img class="bg_img" src="{% static "images/mountain2.jpg" %}"/>
   <div class="content">
     <h2>Current Mountain Conditions</h2>
     <div class="line"></div>
@@ -25,7 +25,7 @@
   </div>
 </article>
 <article id="article2" class="panel">
-  <img class="bg_img" src="{% static "mountain2.jpg" %}"/>
+  <img class="bg_img" src="{% static "images/snowboard_jump.jpg" %}"/>
   <div class="content">
     <h2>Mountain Crowd Forecasts</h2>
     <div class="line"></div>
@@ -39,7 +39,7 @@
   </div>
 </article>
 <article id="article3" class="panel">
-  <img class="bg_img" src="{% static "mountain1.jpg" %}"/>
+  <img class="bg_img" src="{% static "images/tunnel_traffic.jpg" %}"/>
   <div class="content">
     <h2>Traffic and Weather Forecasts</h2>
     <div class="line"></div>
