--- a/PowdrMap/templates/place_holder.html
+++ b/PowdrMap/templates/place_holder.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 {% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static "place_holder_style2.css" %}">
+<link rel="stylesheet" type="text/css" href="{% static "place_holder_style3.css" %}">
 <script type="text/javascript" src="{% static "modernizr-2.7.1.js" %}"></script>
 {% endblock %}
 
@@ -10,28 +10,22 @@
 <!-- start of first part of scrolling 1 pager -->
 <div class="line"></div>
 <article id="article1" class="panel">
-  <img class="bg_img" src="{% static "images/mountain2.jpg" %}"/>
+  <!--<img class="article_bg" src="{% static "images/mountain2.jpg" %}"/>-->
   <div class="content">
     <h2>Current Mountain Conditions</h2>
     <div class="line"></div>
-    <!--<figure>
-      <img id="yeti-large" src="{% static "mountain3.jpg" %}"/>
-    </figure>-->
     <p>This site estimates the current number of skiers in each region of each mountain
       based on publically available data from traffic information, webcams, and social media.  
-      Don't get stuck in the crowds!  Check our site from the slopes for the best lift and area
-      to hit up next.
+      Don't get stuck in the crowds!  Check our site from the slopes for the best lift and runs
+      to attack next.
     </p>
   </div>
 </article>
 <article id="article2" class="panel">
-  <img class="bg_img" src="{% static "images/snowboard_jump.jpg" %}"/>
+  <!--<img class="article_bg" src="{% static "images/mountain2.jpg" %}"/> -->
   <div class="content">
     <h2>Mountain Crowd Forecasts</h2>
     <div class="line"></div>
-    <!-- <figure> 
-      <img id="yeti-large" src="{% static "mountain2.jpg" %}"/>
-    </figure> -->
     <p>Don't just take a shot in the dark when planning your weekend or vacation.  Use the Powder
       Map to discover, where the crowds will be during your upcoming vacation.  You have a lot of
       choices for mountains, and we want you to make the right one!
@@ -39,13 +33,10 @@
   </div>
 </article>
 <article id="article3" class="panel">
-  <img class="bg_img" src="{% static "images/tunnel_traffic.jpg" %}"/>
+  <!-- <img class="article_bg" src="{% static "images/mountain2.jpg" %}"/> -->
   <div class="content">
     <h2>Traffic and Weather Forecasts</h2>
     <div class="line"></div>
-    <!-- <figure> 
-      <img id="yeti-large" src="{% static "mountain1.jpg" %}"/>
-    </figure> -->
     <p>We've partnered with the best in weather and traffic in order to provide you with the optimal
       time to head home or to the airport from the mountains.  Just check our site and lunch and ski 
       worry free.  No more 4 hour waits at the tunnel.  Play it smart.  Use the Powder Map.
