--- a/PowdrMap/templates/place_holder.html
+++ b/PowdrMap/templates/place_holder.html
@@ -8,12 +8,10 @@
 
 {% block content %}
 <!-- start of first part of scrolling 1 pager -->
-<div class="line"></div>
 <article id="article1" class="panel">
   <!--<img class="article_bg" src="{% static "images/mountain2.jpg" %}"/>-->
   <div class="content">
     <h2>Current Mountain Conditions</h2>
-    <div class="line"></div>
     <p>This site estimates the current number of skiers in each region of each mountain
       based on publically available data from traffic information, webcams, and social media.  
       Don't get stuck in the crowds!  Check our site from the slopes for the best lift and runs
@@ -21,22 +19,22 @@
     </p>
   </div>
 </article>
+<div class="line" id="article12_line"></div>
 <article id="article2" class="panel">
   <!--<img class="article_bg" src="{% static "images/mountain2.jpg" %}"/> -->
   <div class="content">
     <h2>Mountain Crowd Forecasts</h2>
-    <div class="line"></div>
     <p>Don't just take a shot in the dark when planning your weekend or vacation.  Use the Powder
       Map to discover, where the crowds will be during your upcoming vacation.  You have a lot of
       choices for mountains, and we want you to make the right one!
     </p>
   </div>
 </article>
+<div class="line" id="article23_line"></div>
 <article id="article3" class="panel">
   <!-- <img class="article_bg" src="{% static "images/mountain2.jpg" %}"/> -->
   <div class="content">
     <h2>Traffic and Weather Forecasts</h2>
-    <div class="line"></div>
     <p>We've partnered with the best in weather and traffic in order to provide you with the optimal
       time to head home or to the airport from the mountains.  Just check our site and lunch and ski 
       worry free.  No more 4 hour waits at the tunnel.  Play it smart.  Use the Powder Map.
