--- a/PowdrMap/media/place_holder_style3.css
+++ b/PowdrMap/media/place_holder_style3.css
@@ -7,6 +7,8 @@ html,body {
     font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
     height: 100%;
     width: 100%;
+    /* TODO: this affects too much shit, remove it */
+    background-color: rgba(30, 30, 30, 1.0);
 
 }
 
@@ -76,7 +78,7 @@ article .content {
     width: 50%;
     bottom: 20px;  
     left:25%;  /* put it in the center */
-    background: rgba(0, 0, 0, 1.0);
+    background-color: rgba(30, 30, 30, 1.0);
     padding: 40px;
 
 }
@@ -172,7 +174,7 @@ footer{
 }
 
 footer p{
-    color: rgba(0, 0, 0, 1.0);
+    color: rgba(255, 255, 255, 1.0);
     padding-bottom:-2.5em;
     position:relative;
 }
