--- a/PowdrMap/templates/place_holder.html
+++ b/PowdrMap/templates/place_holder.html
@@ -32,7 +32,6 @@
 </article>
 <div class="line" id="article23_line"></div>
 <article id="article3" class="panel">
-  <!-- <img class="article_bg" src="{% static "images/mountain2.jpg" %}"/> -->
   <div class="content">
     <h2>Traffic and Weather Forecasts</h2>
     <p>We've partnered with the best in weather and traffic in order to provide you with the optimal
@@ -45,5 +44,5 @@
 {% block javascript_includes %}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="{% static "place_holder.js" %}"></script>
-<script type="text/javascript" src="{% static "jquery.scrollTo-1.4.3.1-min.js" %}"></script>
+<script type="text/javascript" src="{% static "jquery.balupton_scrollTo.js" %}"></script>
 {% endblock %}
