Scrolling and Clicking works separately now, but not together

--- a/PowdrMap/templates/base_html5.html
+++ b/PowdrMap/templates/base_html5.html
@@ -21,9 +21,9 @@
 	     and to instead hop on down to the bottom below it. -->
 	{% block nav %}
 	<ul>
-	  <li><a href="#article1">Current Mountain Conditions</a></li>
-	  <li><a href="#article2">Mountain Crowd Forecasts</a></li>
-	  <li><a href="#article3">Traffic Forecasts</a></li>
+	  <li><a id="nav_0" href="#article1" class="in_view">Current Mountain Conditions</a></li>
+	  <li><a id="nav_1" href="#article2" class="">Mountain Crowd Forecasts</a></li>
+	  <li><a id="nav_2" href="#article3" class="">Traffic Forecasts</a></li>
 	</ul>
 	{% endblock %}
       </nav>
