--- a/PowdrMap/media/place_holder_style3.css
+++ b/PowdrMap/media/place_holder_style3.css
@@ -121,6 +121,7 @@ header h1 {
 
 }
 
+/* NAV */
 header nav {
     background: #f8f8f8;
     /* padding: top, right, bottom, left */
@@ -149,10 +150,8 @@ header nav ul li {
     display:inline;
 }
 
-/* NAV */
-
 nav ul li a,
-nav ul li a:visited {
+nav ul li a:visited { 
     color: rgba(255, 255, 255, 0.9);
     display: block;
     float: left;
@@ -163,6 +162,12 @@ nav ul li a:visited {
     padding: 2px 10px 5px;
     text-shadow:0 1px 1px white;
     /*text-transform: uppercase;*/
+}
+
+nav ul li a.in_view,
+nav ul li a.in_view:visited {
+    color: rgba(255, 0, 0, 0.9);
+    text-shadow:0 2px 2px red;
 }
 
 /* FOOTER */
