--- a/PowdrMap/media/place_holder_style3.css
+++ b/PowdrMap/media/place_holder_style3.css
@@ -1,4 +1,3 @@
-@import url("css_reset.css");
 /* Any import results in another call to the server, so stuff it all 
 in one CSS file to decrease the number of required calls to the server */
 
@@ -74,12 +73,13 @@ article {
 article .content {
 
     position: absolute;
-    height: 10%;
+    height: 15%;
     width: 50%;
-    bottom: 20px;  
+    bottom: 80px;  
     left:25%;  /* put it in the center */
     background-color: rgba(30, 30, 30, 1.0);
-    padding: 40px;
+    padding: 30px;
+    margin-bottom: 10px;
 
 }
 
@@ -92,7 +92,8 @@ article h2, article p {
 
 article h2 { 
 
-    margin-bottom: 15px;
+    top: -15px;
+    margin-bottom: 5px;
     text-align: center; 
 
 }
