--- a/PowdrMap/templates/base_html5.html
+++ b/PowdrMap/templates/base_html5.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>{% block title %}Mountain Crowd Estimates{% endblock %}</title>
     {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static "css_reset.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "basic_style.css" %}">
     {% block header %}
     {% endblock %}
