--- a/PowdrMap/media/place_holder_style3.css
+++ b/PowdrMap/media/place_holder_style3.css
@@ -7,6 +7,12 @@ html {
     
 }
 
+body:before {
+
+    background-image: url('images/mountain2.jpg'); 
+    
+}
+
 body {
     
     font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -176,6 +182,27 @@ nav ul li a.in_view,
 nav ul li a.in_view:visited {
     color: rgba(255, 0, 0, 0.9);
     text-shadow:0 2px 2px red;
+}
+
+
+/* Nav Span On the Side */
+
+nav span, .carousel nav span {
+    cursor: pointer;
+    display: inline-block;
+    background-color: #BBB;
+    border: 2px solid transparent;
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    margin: 0px 3px;
+    background-clip: content-box;
+    transition: all 0.5s ease 0s;
+}
+
+nav span.active {
+    background-color: transparent;
+    border-color: #888;
 }
 
 /* FOOTER */
