Added huge template and celery dev setup

--- a/PowdrMap/templates/base_html5.html
+++ b/PowdrMap/templates/base_html5.html
@@ -10,6 +10,7 @@
     {% endblock %}
     <!-- No HTML5 shiv needed, included in Modernizr -->
   </head>
+  {% block body %}
   <body>
     {% block content %}<!-- put default content in here, can always be overwritten --> 
     {% endblock %}
@@ -24,4 +25,5 @@
     {% block javascript_includes %}
     {% endblock %}
   </body>
+  {% endblock %}
 </html>
