--- a/PowdrMap/templates/place_holder.html
+++ b/PowdrMap/templates/place_holder.html
@@ -4,6 +4,10 @@
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static "place_holder_style3.css" %}">
 <script type="text/javascript" src="{% static "modernizr-2.7.1.js" %}"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="{% static "jquery.balupton_scrollTo.js" %}"></script>
+<!-- TODO: ?v=00001 is a HACK for development to force browser cache reset, update to autoversioning in the future -->
+<script type="text/javascript" src="{% static "place_holder.js" %}?v=00001"></script> 
 {% endblock %}
 
 {% block content %}
@@ -70,11 +74,4 @@
     <span class="snow-yeti-link"></span>
   </nav>
 </section>
-{% endblock %}
-
-
-{% block javascript_includes %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="{% static "place_holder.js" %}"></script>
-<script type="text/javascript" src="{% static "jquery.balupton_scrollTo.js" %}"></script>
 {% endblock %}
